--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Random Joke Generation</title>
-    
-    <script src="app.js"></script>
+
+    <script src="script.js"></script>
 
 </head>
 
