--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Random Joke Generation</title>
 
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 
 </head>
 
